--- a/Halloapp/de.lproj/Localizable.strings
+++ b/Halloapp/de.lproj/Localizable.strings
@@ -421,6 +421,9 @@
 /* Title for audio post composer */
 "composer.audio.title" = "Neuer Audiobeitrag";
 
+/* Title on edit button */
+"composer.button.edit" = "Bearbeiten";
+
 /* Title warning that a voice recording will be deleted */
 "composer.delete.recording.title" = "Sprachaufnahme löschen?";
 
@@ -499,6 +502,9 @@
 /* Title for generic delete button. */
 "Delete" = "Löschen";
 
+/* link, tapping on which launched the flow to edit favorites */
+"edit.favorites" = "Favoriten bearbeiten";
+
 /* Text to show on profile for users you are not connected with */
 "exchange.phone.numbers.to.connect" = "Einfach Handynummern austauschen, um den Kontakt herzustellen";
 
@@ -510,6 +516,9 @@
 
 /* Description of an externally shared post containing just text */
 "externalShare.og.description.text" = "Textbeitrag";
+
+/* Title for posts that are externally shared, 'John Smith's HalloApp Post' */
+"externalShare.og.title3" = "%@'s HalloApp-Beitrag";
 
 /* VoiceOver label for camera button in floating compose post menu in Home view. */
 "fab.accessibility.camera" = "Kamera";
@@ -601,6 +610,9 @@
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.all" = "Meine Kontakte";
 
+/* Header for the list of all contacts on HallAapp. */
+"feed.privacy.list.all.details" = "Meine HalloApp-Kontakte";
+
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.except" = "Meine Kontakte außer...";
 
@@ -614,10 +626,10 @@
 "feed.privacy.list.notOwn.only.description" = "Dieser Beitrag wird nur mit einem begrenzten Benutzerkreis geteilt. Du kannst deine Zielgruppe in den Privatsphäre-Einstellungen jederzeit anpassen.";
 
 /* Settings > Privacy > Posts > Favorites privacy setting. */
-"feed.privacy.list.only" = "Nur teilen mit...";
+"feed.privacy.list.only" = "Favoriten\n";
 
 /* Header for the list when selecting contacts to share with. */
-"feed.privacy.list.only.details" = "Wähle aus, wer diesen Beitrag sehen soll";
+"feed.privacy.list.only.details" = "Wer wird diesen Beitrag sehen";
 
 /* Title of the alert shown to user indicating their post is only shown to their favorites audience */
 "feed.privacy.list.only.title" = "Favoriten";
@@ -922,6 +934,9 @@
 /* Button title. Refers to resetting photo / video to original version. */
 "media.button.reset" = "Zurücksetzen";
 
+/* Button title. Refers to undoing an edit of a photo. */
+"media.button.undo" = "Rückgängig machen";
+
 /* Alert asking to enable Camera permission after attempting to use in-app camera. */
 "media.camera.access.request" = "HalloApp hat keinen Zugriff auf deine Kamera. Um den Zugriff zu erlauben, tippe auf Einstellungen und aktiviere die Kamera";
 
@@ -994,8 +1009,14 @@
 /* One of the contact actions in My Post screen. */
 "mypost.action.view.profile" = "Profil ansehen";
 
+/* Message displayed to say when posts will disappear for posts shared with contacts. */
+"mypost.contacts.disappear.time.label" = "Dein Beitrag ist 30 Tage sichtbar. Deine Kontakte, die HalloApp beitreten, können deine nicht abgelaufenen Beiträge sehen.";
+
 /* Generic message displayed to say when posts will disappear. */
-"mypost.disappear.time.label" = "Deine Beiträge sind 30 Tage sichtbar.";
+"mypost.disappear.time.label" = "Dein Beitrag ist 30 Tage sichtbar.";
+
+/* Message displayed to say when posts will disappear for posts shared with favorites. */
+"mypost.favorites.disappear.time.label" = "Dein Beitrag wurde mit deinen Favoriten geteilt und ist für 30 Tage sichtbar.";
 
 /* Confirmation when hiding posts from a certain contact. Parameter is contact's full name. */
 "mypost.hide.posts.confirmation" = "Bist du dir sicher, dass du alle deine zukünftigen Beiträge vor %@ verbergen möchtest? Du kannst dies später jederzeit ändern.";
@@ -1497,7 +1518,7 @@
 "textview.context.menu.video.call.user" = "Videoanruf";
 
 /* Link to expand truncated text. */
-"textview.more" = "... mehr";
+"textview.more" = "mehr";
 
 /* Default preview text shown for a symmetric contact in the chats list screen that the user haven't messaged yet */
 "thread.list.preview.already.user.default" = "%@ nutzt HalloApp";
@@ -1586,6 +1607,9 @@
 /* Informational label that's shown in the banner for an unknown contact when they message the user for the first time */
 "unknown.contact.not.in.contact.book" = "Dieser Absender ist nicht in deinen Kontakten.";
 
+/* Alert appearing after clicking an external share link that failed to load */
+"urlrouter.externalShare.failed" = "Beitrag konnte nicht geladen werden";
+
 /* Button to confirm blocking user via profile page */
 "user.block" = "Blocken";
 
@@ -1634,8 +1658,17 @@
 /* Success toast when external share link is copied */
 "your.post.externalshare.copylink.success" = "In die Zwischenablage kopiert";
 
+/* Message on header of post menu explaining external share */
+"your.post.externalshare.description2" = "Jeder, der den Link hat, kann deinen Beitrag sehen. Der Link läuft mit deinem Beitrag ab. Die Linkvorschau ist unverschlüsselt.";
+
 /* Message that external share failed. */
 "your.post.externalshare.error" = "Beitrag für externe Freigabe konnte nicht hochgeladen werden";
+
+/* Button to invalidate an external share link */
+"your.post.externalshare.revoke" = "Link widerrufen";
+
+/* Message that revoking external share link failed. */
+"your.post.externalshare.revoke.error" = "Link für externe Freigabe konnte nicht widerrufen werden";
 
 /* Text introducing external share link, part of what is shared */
 "your.post.externalshare.title" = "Schau dir meinen Beitrag auf HalloApp an:";
